syntax = "proto3";

package config;

message FrontendTemplateData {
  // Contents of the JS global variable `window.buildBuddyConfig`.
  FrontendConfig config = 1;

  // Path to the JS entry point.
  string js_entry_point_path = 2;

  // Whether or not to render GA tag.
  bool ga_enabled = 3;
}

message FrontendConfig {
  // The version of this buildbuddy instance.
  string version = 1;

  // The issuers configured by the backend.
  repeated string configured_issuers = 2;

  // Whether to default to Dense UI mode.
  bool default_to_dense_mode = 3;

  // Whether Github linking is enabled.
  bool github_enabled = 4;

  // Whether anonymous usage is enabled.
  bool anonymous_usage_enabled = 5;

  // Whether or not the test dashboard is enabled.
  bool test_dashboard_enabled = 6;

  // Whether user owned executors feature is enabled.
  bool user_owned_executors_enabled = 7;

  // Whether executor keys can be created.
  bool executor_key_creation_enabled = 8;

  // Whether workflows are enabled.
  bool workflows_enabled = 9;

  // Whether code editor is enabled.
  bool code_editor_enabled = 10;

  // Whether code editor is enabled.
  bool chunked_event_logs_enabled = 11;

  // Whether remote execution is enabled.
  bool remote_execution_enabled = 12;

  // Whether or not SSO is enabled.
  bool sso_enabled = 13;

  // Whether or not the global invocation filter is enabled.
  bool global_filter_enabled = 14;
}
